--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -421,15 +421,13 @@
         */
 
   </script>
-
-
-  <script src="./classes/User.js"></script>
-  <script src="/functions/main-expense-function.js"></script>
-  <script src="/functions/chart.js"></script>
-  <script src="/functions/expense-function.js"></script>
-  <script src="/utils/loadFile.js"></script>
 </body>
 
-<script src="./classes/User.js"></script>
+<script src="/functions/user-function.js"></script>
+<script src="/utils/loadFile.js"></script>
+
+<!-- <script type="module">
+  loadUser();
+</script> -->
 
 </html>
