--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
-  <link rel="stylesheet" href="./styles.global.css">
-  <link rel="stylesheet" href="./styles/desktop.css" />
-  <link rel="stylesheet" href="./styles/mobile.css" />
+  <link rel="stylesheet" href="/styles/global.css">
+  <link rel="stylesheet" href="/styles/desktop.css" />
+  <link rel="stylesheet" href="/styles/mobile.css" />
 </head>
 
 <body>
@@ -273,37 +273,7 @@
             </div>
           </section>
         </div>
-        <div id="bankInformationSection" style="display: none">
-          <div class="table-container">
-            <h4>Your banks:</h4>
-            <table>
-              <thead>
-                <tr>
-                  <th style="width: 20%">Bank name</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td style="width: 80px; height: 40px">Santander</td>
-                  <td>Bank account</td>
-                </tr>
-                <tr>
-                  <td style="width: 80px; height: 40px">RBC</td>
-                  <td>Bank account</td>
-                </tr>
-                <tr>
-                  <td style="width: 80px; height: 60px">Fineco</td>
-                  <td>Bank account</td>
-                </tr>
-                <tr>
-                  <td style="width: 80px; height: 40px">CIBC</td>
-                  <td>Savings</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+        <div id="bankInformationSection" style="display: none"></div>
       </section>
     </main>
   </div>
