--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 
+  <link rel="stylesheet" href="./user-info.css">
   <link rel="stylesheet" href="/styles/global.css">
   <link rel="stylesheet" href="/styles/desktop.css" />
   <link rel="stylesheet" href="/styles/mobile.css" />
@@ -17,113 +18,67 @@
       <script src="/classes/Header.js"></script>
     </header>
 
-    <input type="checkbox" id="mobileMenuBtn" />
-    <label for="mobileMenuBtn" class="hamburgerBtn mobileBtn">
-      <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M5 21.5866V20.3366H25V21.5866H5ZM5 15.625V14.375H25V15.625H5ZM5 9.66345V8.41345H25V9.66345H5Z"
-          fill="#5A1CDF" />
-      </svg>
-    </label>
-
-    <nav>
-      <label for="mobileMenuBtn" class="closeBtn mobileBtn">
-        <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M7.99992 22.8847L7.11523 22L14.1152 15L7.11523 8.00001L7.99992 7.11533L14.9999 14.1153L21.9999 7.11533L22.8846 8.00001L15.8846 15L22.8846 22L21.9999 22.8847L14.9999 15.8847L7.99992 22.8847Z"
-            fill="#5A1CDF" />
-        </svg>
-      </label>
-      <div class="user-info">
-        <a href="./pages/UserInfo/index.html">
-          <img src="./johnpic.JPG" alt="undraw_profile" style="border-radius: 10px" />
-          <h3 class="user-info-h3">
-            Welcome back,
-            <div id="user-name"></div>
-          </h3>
-        </a>
-      </div>
-
-      <!--da qui 0-->
-
-      <div class="menu">
-        <a href="#" id="userSummaryLink">
-          <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M5 1.5H23C24.933 1.5 26.5 3.067 26.5 5V15C26.5 16.933 24.933 18.5 23 18.5H15.0949C14.5811 18.5 14.0692 18.5609 13.5697 18.6815L2.11732 21.4458C1.80275 21.5218 1.5 21.2834 1.5 20.9598V5C1.5 3.067 3.067 1.5 5 1.5Z"
-              stroke="#CCC3DC" stroke-width="3" />
-            <circle cx="8.78571" cy="7.78571" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 7.78571H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="10.1429" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 10.1429H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="12.5" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 12.5H19" stroke="#5A1CDF" stroke-linecap="round" />
-          </svg>
-          <h3 class="active user-info-h3">User SUMMARY</h3>
-        </a>
-      </div>
-
-      <!--da qui 1-->
-
-      <div class="menu">
-        <a href="#" id="userInfoLink">
-          <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M5 1.5H23C24.933 1.5 26.5 3.067 26.5 5V15C26.5 16.933 24.933 18.5 23 18.5H15.0949C14.5811 18.5 14.0692 18.5609 13.5697 18.6815L2.11732 21.4458C1.80275 21.5218 1.5 21.2834 1.5 20.9598V5C1.5 3.067 3.067 1.5 5 1.5Z"
-              stroke="#CCC3DC" stroke-width="3" />
-            <circle cx="8.78571" cy="7.78571" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 7.78571H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="10.1429" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 10.1429H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="12.5" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 12.5H19" stroke="#5A1CDF" stroke-linecap="round" />
-          </svg>
-          <h3 class="active user-info-h3">User Information</h3>
-        </a>
-      </div>
-
-      <!--da qui 2-->
-
-      <div class="menu">
-        <a href="#" id="bankInformationLink">
-          <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path
-              d="M5 1.5H23C24.933 1.5 26.5 3.067 26.5 5V15C26.5 16.933 24.933 18.5 23 18.5H15.0949C14.5811 18.5 14.0692 18.5609 13.5697 18.6815L2.11732 21.4458C1.80275 21.5218 1.5 21.2834 1.5 20.9598V5C1.5 3.067 3.067 1.5 5 1.5Z"
-              stroke="#CCC3DC" stroke-width="3" />
-            <circle cx="8.78571" cy="7.78571" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 7.78571H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="10.1429" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 10.1429H19" stroke="#5A1CDF" stroke-linecap="round" />
-            <circle cx="8.78571" cy="12.5" r="0.785714" fill="#5A1CDF" />
-            <path d="M11.9286 12.5H19" stroke="#5A1CDF" stroke-linecap="round" />
-          </svg>
-          <h3 class="active user-info-h3">Bank Information</h3>
-        </a>
-      </div>
-    </nav>
-    </header>
-
     <!-- User Dashboard -->
-    <main>
+
+    <main class="user-container">
+      <div>
+
+        <!--da qui 1-->
+        <div id="nav-2">
+          <div class="menu">
+            <a href="#" id="userInfoLink">
+              <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5 1.5H23C24.933 1.5 26.5 3.067 26.5 5V15C26.5 16.933 24.933 18.5 23 18.5H15.0949C14.5811 18.5 14.0692 18.5609 13.5697 18.6815L2.11732 21.4458C1.80275 21.5218 1.5 21.2834 1.5 20.9598V5C1.5 3.067 3.067 1.5 5 1.5Z"
+                  stroke="#CCC3DC" stroke-width="3" />
+                <circle cx="8.78571" cy="7.78571" r="0.785714" fill="#5A1CDF" />
+                <path d="M11.9286 7.78571H19" stroke="#5A1CDF" stroke-linecap="round" />
+              </svg>
+              <h3 class="active user-info-h3">User Information</h3>
+            </a>
+          </div>
+
+          <!--da qui 2-->
+          <div class="menu">
+            <a href="#" id="bankInformationLink">
+              <svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M5 1.5H23C24.933 1.5 26.5 3.067 26.5 5V15C26.5 16.933 24.933 18.5 23 18.5H15.0949C14.5811 18.5 14.0692 18.5609 13.5697 18.6815L2.11732 21.4458C1.80275 21.5218 1.5 21.2834 1.5 20.9598V5C1.5 3.067 3.067 1.5 5 1.5Z"
+                  stroke="#CCC3DC" stroke-width="3" />
+                <circle cx="8.78571" cy="7.78571" r="0.785714" fill="#5A1CDF" />
+                <path d="M11.9286 7.78571H19" stroke="#5A1CDF" stroke-linecap="round" />
+              </svg>
+              <h3 class="active user-info-h3">User Summary</h3>
+            </a>
+          </div>
+        </div>
+
+      </div>
+
       <section class="user-dashboard">
-        <div id="userInfoSection" style="display: none">
-          <table>
+        <div id="userInfoSection">
+          <table style="margin-bottom: 30px;">
             <h4>User Information:</h4>
             <tbody>
               <tr>
                 <th>Name</th>
-                <td data-label="Nome">John</td>
+                <td id="fname"></td>
               </tr>
               <tr>
                 <th>Surname</th>
-                <td data-label="Cognome">Rossi</td>
+                <td id="lname"></td>
               </tr>
               <tr>
                 <th>Email</th>
-                <td data-label="Email">john.rossi@example.com</td>
+                <td id="email"></td>
+              </tr>
+              <tr>
+                <th>Password</th>
+                <td id="password"></td>
               </tr>
               <tr>
                 <th>Phone number</th>
-                <td data-label="Numero di Telefono">+39 347 123 4567</td>
+                <td id="phone">N/A</td>
               </tr>
             </tbody>
           </table>
@@ -138,11 +93,7 @@
                     onclick="toggleDefinition(this)" />
                   <div class="definition">
                     User agrees to the use of their data for specified
-                    purposes. Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Magni maiores a, autem nihil neque
-                    accusamus, culpa deserunt consectetur blanditiis
-                    perspiciatis temporibus voluptates asperiores, ex
-                    perferendis vero velit voluptatibus. Fuga, quasi.
+                    purposes.
                   </div>
                 </td>
               </tr>
@@ -186,11 +137,6 @@
                     onclick="toggleDefinition(this)" />
                   <div class="definition">
                     User allows the use of tracking technologies and cookies.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Voluptates optio quisquam molestiae repudiandae quia earum
-                    voluptatibus error dignissimos aliquam perferendis dolorum
-                    nemo numquam libero tenetur dolorem, animi at cumque?
-                    Rerum!
                   </div>
                 </td>
               </tr>
@@ -213,8 +159,9 @@
           </table>
         </div>
 
+        <!-- 
         <div id="userSummarySection" style="display: none">
-          <!--<section class="annual-summary">
+          <section class="annual-summary">
             <h2 class="subTitle">Annual Summary</h2>
             <table id="monthlySummaryTable">
               <thead>
@@ -229,74 +176,64 @@
             </table>
           </section>
         -->
-          <section class="left-section">
-            <h2 class="subTitle currentMonth" style="color: #5a1cdf; text-align: center; font-weight: bold">
-              Look at your Annualy expense
-            </h2>
-            <div class="current-box">
-              <h3 class="transTitle">Current Balance</h3>
-              <h1></h1>
-            </div>
-            <div class="monthlyExpense">
-              <div class="MonthSummary income">
-                <h3 class="transTitle">Annualy Income</h3>
-                <h2></h2>
-              </div>
-              <div class="MonthSummary expense">
-                <h3 class="transTitle">Annualy Expense</h3>
-                <h2></h2>
-              </div>
-              <div class="form-container">
-                <h2>Seleziona un Mese</h2>
-                <form id="monthForm" onsubmit="handleMonthSelection(event)">
-                  <label for="monthSelect">Scegli un mese:</label>
-                  <select id="monthSelect" name="month">
-                    <option value="" disabled selected>
-                      Seleziona un mese
-                    </option>
-                    <option value="january">Gennaio</option>
-                    <option value="february">Febbraio</option>
-                    <option value="march">Marzo</option>
-                    <option value="april">Aprile</option>
-                    <option value="may">Maggio</option>
-                    <option value="june">Giugno</option>
-                    <option value="july">Luglio</option>
-                    <option value="august">Agosto</option>
-                    <option value="september">Settembre</option>
-                    <option value="october">Ottobre</option>
-                    <option value="november">Novembre</option>
-                    <option value="december">Dicembre</option>
-                  </select>
-                  <button type="submit">Visualizza</button>
-                </form>
-              </div>
-            </div>
-          </section>
+
+
+        <div id="bankInformationSection" style="display: none">
+          <table id="categoryTable">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Category</th>
+                <th>Description</th>
+                <th style="background-color: blueviolet;">Limit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- JavaScript will insert data here -->
+            </tbody>
+          </table>
         </div>
-        <div id="bankInformationSection" style="display: none"></div>
       </section>
     </main>
   </div>
 
   <script>
-    document
-      .getElementById("userSummaryLink")
-      .addEventListener("click", function (event) {
-        event.preventDefault(); // Preveniamo il comportamento predefinito del link
+    // Set default visibility
+    document.getElementById("userInfoSection").style.display = "block";
+    document.getElementById("bankInformationSection").style.display = "none";
 
-        // Mostra la sezione nascosta
-        const userInfoSection = document.getElementById("userSummarySection");
+    // Add event listener for "Bank Information" link
+    document.getElementById("bankInformationLink").addEventListener("click", function (event) {
+      event.preventDefault();
+      // Hide User Info and show Bank Info
+      document.getElementById("userInfoSection").style.display = "none";
+      document.getElementById("bankInformationSection").style.display = "block";
+    });
 
-        if (
-          userInfoSection.style.display === "none" ||
-          userInfoSection.style.display === ""
-        ) {
-          userInfoSection.style.display = "block";
-        } else {
-          userInfoSection.style.display = "none"; // Puoi nasconderla nuovamente se vuoi che sia una sezione a scomparsa
-        }
-      });
+    // Optionally, handle the "User Information" link if you'd like to toggle back
+    document.getElementById("userInfoLink").addEventListener("click", function (event) {
+      event.preventDefault();
+      // Hide Bank Info and show User Info
+      document.getElementById("bankInformationSection").style.display = "none";
+      document.getElementById("userInfoSection").style.display = "block";
+    });
 
+
+
+    fetch('user_data.json') // Assicurati che il percorso sia corretto
+      .then(response => response.json())
+      .then(data => {
+        // Inserisci i dati nei campi della tabella
+        document.getElementById('fname').textContent = data.fname;
+        document.getElementById('lname').textContent = data.lname;
+        document.getElementById('email').textContent = data.email;
+        document.getElementById('password').textContent = data.password;
+      })
+      .catch(error => console.error('Errore nel caricamento dei dati:', error));
+
+
+
+    /*
     document
       .getElementById("userInfoLink")
       .addEventListener("click", function (event) {
@@ -334,6 +271,7 @@
           userInfoSection.style.display = "none"; // Puoi nasconderla nuovamente se vuoi che sia una sezione a scomparsa
         }
       });
+      */
 
     function toggleDefinition(icon) {
       // Trova la definizione sotto il td della riga cliccata
@@ -347,6 +285,47 @@
         definition.style.display = "none"; // Nascondi la definizione
       }
     }
+
+
+
+    fetch('category_data.json')
+      .then(response => response.json())
+      .then(data => {
+        const tableBody = document.querySelector("#categoryTable tbody");
+
+        data.forEach(category => {
+          const row = document.createElement("tr");
+
+          // Create cells for each property in the JSON data
+          const idCell = document.createElement("td");
+          idCell.textContent = category.id;
+          row.appendChild(idCell);
+
+          const nameCell = document.createElement("td");
+          nameCell.textContent = category.name;
+          row.appendChild(nameCell);
+
+          const descriptionCell = document.createElement("td");
+          descriptionCell.textContent = category.description;
+          row.appendChild(descriptionCell);
+
+          const limitCell = document.createElement("td");
+          limitCell.textContent = category.limit;
+          row.appendChild(limitCell);
+
+          // Append the row to the table
+          tableBody.appendChild(row);
+        });
+      })
+      .catch(error => console.error('Error fetching JSON:', error));
+
+
+
+
+
+
+
+
 
     /*
       function getMonthlySummary() {
