--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>User Info</title>
 
     <link rel="stylesheet" href="./user-info.css" />
     <link rel="stylesheet" href="/styles/global.css" />
@@ -104,10 +104,6 @@
                   <td id="email"></td>
                 </tr>
                 <tr>
-                  <th>Password</th>
-                  <td id="password"></td>
-                </tr>
-                <tr>
                   <th>Phone number</th>
                   <td id="phone">N/A</td>
                 </tr>
@@ -205,24 +201,6 @@
             </table>
           </div>
 
-          <!-- 
-        <div id="userSummarySection" style="display: none">
-          <section class="annual-summary">
-            <h2 class="subTitle">Annual Summary</h2>
-            <table id="monthlySummaryTable">
-              <thead>
-                <tr>
-                  <th>Month</th>
-                  <th>Income</th>
-                  <th>Expense</th>
-                  <th>Balance</th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-          </section>
-        -->
-
           <div id="bankInformationSection" style="display: none">
             <table id="categoryTable">
               <thead>
@@ -233,9 +211,7 @@
                   <th style="background-color: blueviolet">Limit</th>
                 </tr>
               </thead>
-              <tbody>
-                <!-- JavaScript will insert data here -->
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
         </section>
@@ -243,67 +219,27 @@
     </div>
 
     <script>
-      // Set default visibility
       document.getElementById("userInfoSection").style.display = "block";
       document.getElementById("bankInformationSection").style.display = "none";
 
-      // Add event listener for "Bank Information" link
       document
         .getElementById("bankInformationLink")
         .addEventListener("click", function (event) {
           event.preventDefault();
-          // Hide User Info and show Bank Info
           document.getElementById("userInfoSection").style.display = "none";
           document.getElementById("bankInformationSection").style.display =
             "block";
         });
 
-      // Optionally, handle the "User Information" link if you'd like to toggle back
       document
         .getElementById("userInfoLink")
         .addEventListener("click", function (event) {
           event.preventDefault();
-          // Hide Bank Info and show User Info
           document.getElementById("bankInformationSection").style.display =
             "none";
           document.getElementById("userInfoSection").style.display = "block";
         });
 
-      fetch("user_data.json") // Assicurati che il percorso sia corretto
-        .then((response) => response.json())
-        .then((data) => {
-          // Inserisci i dati nei campi della tabella
-          // document.getElementById("fname").textContent = data.fname;
-          document.getElementById("lname").textContent = data.lname;
-          document.getElementById("email").textContent = data.email;
-          document.getElementById("password").textContent = data.password;
-        })
-        .catch((error) =>
-          console.error("Errore nel caricamento dei dati:", error)
-        );
-
-      // Hyejin's Update
-      // localStorage Update - example
-      document.addEventListener("DOMContentLoaded", function () {
-        loadUserData();
-      });
-
-      function loadUserData() {
-        fetch("user_data.json")
-          .then((response) => response.json())
-          .then((data) => {
-            const userData = JSON.parse(localStorage.getItem("userData")) || {};
-            const displayName = userData.fname || data.fname;
-            document.getElementById("fname").textContent = displayName;
-
-            userData.fname = data.fname;
-          });
-        const userData = JSON.parse(localStorage.getItem("userData")) || {};
-        document.getElementById("fname").textContent =
-          userData.fname || data.fname;
-      }
-
-      // edit function - click the field
       function editField(fieldId) {
         const cell = document.getElementById(fieldId);
         const currentValue = cell.textContent;
@@ -315,162 +251,37 @@
         cell.appendChild(input);
         input.focus();
 
-        // keyboard out
         input.onblur = function () {
           const newValue = input.value;
           cell.textContent = newValue;
           saveUserData(fieldId, newValue);
         };
-        // enter key
         input.onkeypress = function (e) {
           if (e.key === "Enter") {
             input.blur();
           }
         };
       }
-      // save the new data in localStorage
       function saveUserData(fieldId, value) {
-        const userData = JSON.parse(localStorage.getItem("userData")) || {};
-        userData[fieldId] = value;
-        localStorage.setItem("userData", JSON.stringify(userData));
+        const user = JSON.parse(localStorage.getItem("user")) || {};
+        user[fieldId] = value;
+        localStorage.setItem("user", JSON.stringify(user));
       }
 
-      // Hyejin's Update end
-
-      /*
-    document
-      .getElementById("userInfoLink")
-      .addEventListener("click", function (event) {
-        event.preventDefault(); // Preveniamo il comportamento predefinito del link
-
-        // Mostra la sezione nascosta
-        const userInfoSection = document.getElementById("userInfoSection");
-
-        if (
-          userInfoSection.style.display === "none" ||
-          userInfoSection.style.display === ""
-        ) {
-          userInfoSection.style.display = "block";
-        } else {
-          userInfoSection.style.display = "none"; // Puoi nasconderla nuovamente se vuoi che sia una sezione a scomparsa
-        }
-      });
-
-    document
-      .getElementById("bankInformationLink")
-      .addEventListener("click", function (event) {
-        event.preventDefault(); // Preveniamo il comportamento predefinito del link
-
-        // Mostra la sezione nascosta
-        const userInfoSection = document.getElementById(
-          "bankInformationSection"
-        );
-
-        if (
-          userInfoSection.style.display === "none" ||
-          userInfoSection.style.display === ""
-        ) {
-          userInfoSection.style.display = "block";
-        } else {
-          userInfoSection.style.display = "none"; // Puoi nasconderla nuovamente se vuoi che sia una sezione a scomparsa
-        }
-      });
-      */
-
       function toggleDefinition(icon) {
-        // Trova la definizione sotto il td della riga cliccata
         const definition = icon.parentElement.querySelector(".definition");
         if (
           definition.style.display === "none" ||
           definition.style.display === ""
         ) {
-          definition.style.display = "block"; // Mostra la definizione
+          definition.style.display = "block";
         } else {
-          definition.style.display = "none"; // Nascondi la definizione
+          definition.style.display = "none";
         }
       }
-
-      fetch("category_data.json")
-        .then((response) => response.json())
-        .then((data) => {
-          const tableBody = document.querySelector("#categoryTable tbody");
-
-          data.forEach((category) => {
-            const row = document.createElement("tr");
-
-            // Create cells for each property in the JSON data
-            const idCell = document.createElement("td");
-            idCell.textContent = category.id;
-            row.appendChild(idCell);
-
-            const nameCell = document.createElement("td");
-            nameCell.textContent = category.name;
-            row.appendChild(nameCell);
-
-            const descriptionCell = document.createElement("td");
-            descriptionCell.textContent = category.description;
-            row.appendChild(descriptionCell);
-
-            const limitCell = document.createElement("td");
-            limitCell.textContent = category.limit;
-            row.appendChild(limitCell);
-
-            // Append the row to the table
-            tableBody.appendChild(row);
-          });
-        })
-        .catch((error) => console.error("Error fetching JSON:", error));
-
-      /*
-      function getMonthlySummary() {
-        const expenses = JSON.parse(localStorage.getItem("expense")) || [];
-        const monthlySummary = {};
-  
-        expenses.forEach(expense => {
-          const expenseDate = new Date(expense.date);
-          const monthKey = `${expenseDate.getFullYear()}-${String(expenseDate.getMonth() + 1).padStart(2, '0')}`;
-  
-          if (!monthlySummary[monthKey]) {
-            monthlySummary[monthKey] = { income: 0, expense: 0 };
-          }
-  
-          if (expense.income === "income") {
-            monthlySummary[monthKey].income += expense.cost;
-          } else if (expense.income === "expense") {
-            monthlySummary[monthKey].expense += expense.cost;
-          }
-        });
-  
-        return monthlySummary;
-      }
-  
-      function displayMonthlySummary() {
-        const summary = getMonthlySummary();
-        const tableBody = document.querySelector("#monthlySummaryTable tbody");
-        tableBody.innerHTML = "";
-  
-        Object.keys(summary).forEach(month => {
-          const monthData = summary[month];
-          const newRow = document.createElement("tr");
-  
-          newRow.innerHTML = `
-              <td>${month}</td>
-              <td>+ $ ${monthData.income.toFixed(2)}</td>
-              <td>- $ ${monthData.expense.toFixed(2)}</td>
-              <td>$ ${(monthData.income - monthData.expense).toFixed(2)}</td>
-          `;
-  
-          tableBody.appendChild(newRow);
-        });
-      }
-      */
     </script>
   </body>
 
   <script src="/functions/user-function.js"></script>
   <script src="/utils/loadFile.js"></script>
-
-  <!-- <script type="module">
-  loadUser();
-</script> -->
 </html>
