[feat] using localstorage categories

--- a/pages/expense-list/index.html
+++ b/pages/expense-list/index.html
@@ -59,6 +59,7 @@
 
   <script src="/utils//makeBtn.js"></script>
   <script src="/functions/expense-function.js"></script>
+  <script src="/functions/user-function.js"></script>
   <script src="/utils/loadFile.js"></script>
 
   <script type="module">
