--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -154,6 +154,7 @@
         </div>
 
         <div id="bankInformationSection" style="display: none">
+          <span id="error-message" style="color: red; font-size: 20px; font-weight: bold;"></span>
           <table id="categoryTable">
             <thead>
               <tr>
@@ -219,6 +220,7 @@
         }
       };
     }
+
     function saveUserData(fieldId, value) {
       const user = JSON.parse(localStorage.getItem("user")) || {};
       user[fieldId] = value;
