feat: calculated limit burget

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p class="monthly-total">300</p>
                 <p class="total-limit">300</p>
               </div>
-              <div class="limitVar-area">
+              <div class="limitBar-area">
                 <div class="limit-fill"></div>
               </div>
             </div>
