[chore] Edit UI

--- a/pages/UserInfo/index.html
+++ b/pages/UserInfo/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Info</title>
+    <title>Document</title>
 
-    <link rel="stylesheet" href="./user-info.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/styles/desktop.css" />
     <link rel="stylesheet" href="/styles/mobile.css" />
@@ -208,7 +208,7 @@
                   <th>Number</th>
                   <th>Category</th>
                   <th>Description</th>
-                  <th style="background-color: blueviolet">Limit</th>
+                  <th style="background-color: blueviolet">Budget</th>
                 </tr>
               </thead>
               <tbody></tbody>
