[chore] Add user-function in dashboard

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
   <script src="./classes/User.js"></script>
   <script src="/functions/main-expense-function.js"></script>
+  <script src="/functions/user-function.js"></script>
   <script src="/functions/chart.js"></script>
   <script src="/utils/loadFile.js"></script>
 </html>
