refeat: total progress bar

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <h1></h1>
             <div class="limit-area">
               <div class="monthly-limit">
-                <p class="monthly-total">300</p>
-                <p class="total-limit">300</p>
+                <p class="monthly-total"></p>
+                <p class="total-limit"></p>
               </div>
               <div class="limitBar-area">
                 <div class="limit-fill"></div>
